# django-rottweiler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  runtests.sh  setup.cfg  setup.py
rottweiler/: __init__.py  apps.py  backends.py  global_permission.py  mixins.py  registry.py  urls.py  view_helpers.py  views.py
rottweiler/templates/rottweiler/: index.html  permission.html  urls.html
rottweiler/templatetags/: rottweiler_tags.py
rottweiler/tests/: stubs.py  test_backends.py  test_mixins.py  test_registry.py  test_rottweiler_tags.py  test_views.py
test_rottweiler/testapp/: settings.py  urls.py
tests/: conftest.py  stubs.py  test_backends.py  test_mixins.py  test_registry.py  test_rottweiler_tags.py  test_views.py
tests/testapp/: settings.py  urls.py
tests/testapp/project/: permissions.py  views.py
