[metadata]
name = django-rottweiler
version = attr: rottweiler.__version__
description = A permission model that allows global and object-level rule-based permissions
long_description = file: README.rst

[options]
zip_safe = False
packages = find_namespace:
install_requires =
    Django < 3

[options.extras_require]
twig =
    django-rulez @ git+ssh://git@github.com/TwigWorld/django-rulez.git
testing =
    mock
    pytest
    pytest-django

[options.package_data]
* =
    *.html

[tool:pytest]
testpaths = tests
addopts = --disable-warnings -rfEs -q --durations=3
xfail_strict = true

[isort]
profile = black
known_django = django
known_twig = twig_core
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,TWIG,FIRSTPARTY,LOCALFOLDER
force_single_line = true
force_sort_within_sections = true

[flake8]
max-line-length = 88